--- a/package.json
+++ b/package.json
@@ -3,17 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "@material-ui/core": "4.8.1",
+    "@material-ui/icons": "4.5.1",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.3.2",
+    "@testing-library/user-event": "7.1.2",
+    "@types/jest": "24.0.25",
+    "@types/lodash.flowright": "3.5.6",
+    "@types/lodash.merge": "^4.6.6",
+    "@types/node": "13.1.1",
+    "@types/react": "16.9.17",
+    "@types/react-dom": "16.9.4",
+    "@types/react-router-dom": "5.1.3",
+    "formik": "2.1.1",
+    "lodash": "4.17.15",
+    "lodash.flowright": "3.5.0",
+    "lodash.merge": "^4.6.2",
+    "react": "16.12.0",
+    "react-awesome-slider": "^4.1.0",
+    "react-aws-s3": "1.3.0",
+    "react-dom": "16.12.0",
+    "react-parallax": "^3.0.3",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.4.0",
+    "typescript": "3.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +48,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node-sass": "4.11.0",
+    "node-sass": "4.13.0",
+    "npm-run-all": "4.1.5"
   }
 }
