--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-parallax": "^3.0.3",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
+    "react-slick": "^0.25.2",
     "typescript": "3.7.4"
   },
   "scripts": {
