--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-awesome-slider": "^4.1.0",
     "react-aws-s3": "1.3.0",
     "react-dom": "16.12.0",
+    "react-flipcard": "^0.2.1",
+    "react-flippy": "^0.1.5",
     "react-parallax": "^3.0.3",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
