--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash.merge": "^4.6.2",
     "react": "16.12.0",
     "react-alice-carousel": "^1.18.0",
+    "react-animated-css": "^1.2.1",
     "react-awesome-slider": "^4.1.0",
     "react-aws-s3": "1.3.0",
     "react-dom": "16.12.0",
