--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/lodash.merge": "^4.6.6",
     "@types/node": "13.1.1",
     "@types/react": "16.9.17",
+    "@types/react-animate-on-scroll": "^2.1.2",
     "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "5.1.3",
     "formik": "2.1.1",
@@ -21,16 +22,20 @@
     "lodash.merge": "^4.6.2",
     "react": "16.12.0",
     "react-alice-carousel": "^1.18.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-animated-css": "^1.2.1",
     "react-awesome-slider": "^4.1.0",
     "react-aws-s3": "1.3.0",
+    "react-card-carousel": "^1.1.3",
     "react-dom": "16.12.0",
+    "react-elastic-carousel": "^0.4.1",
     "react-flipcard": "^0.2.1",
     "react-flippy": "^0.1.5",
     "react-parallax": "^3.0.3",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
     "react-slick": "^0.25.2",
+    "styled-components": "^5.1.0",
     "typescript": "3.7.4"
   },
   "scripts": {
